Openshift-Deployment-Files/Backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-pods
  # strategy: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-pods
    spec:
      containers:
      - name: clinic-backend-app
        image: ahmeddalii/clinic-backend:2.0
