Openshift-Deployment-Files/Backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
  - port: 5000 
    protocol: TCP
    nodePort: 30050 
  selector: 
    app: backend-pods
  type: NodePort
