Openshift-Deployment-Files/Backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend-route
  name: backend-route
  namespace: omarzen-dev
spec:
  port:
    targetPort: 5000 
  host: ""
  to: 
    kind: "Service"
    name: "backend-service"
